# NetBricks

./: .dockerignore  Cargo.toml  Makefile  README.md  build.sh  docker.mk  examples.sh  warm_mtu_seconds_build_checks_off.csv  warm_mtu_seconds_build_checks_on.csv  warm_sr_seconds_build_checks_off.csv  warm_sr_seconds_build_checks_on.csv
build-container/: Dockerfile
check/: Cargo.toml
check/src/: lib.rs
docker/: Dockerfile
examples/acl-fw/src/: main.rs
examples/collect-metrics/src/: main.rs
examples/echo-reply/: check.sh
examples/echo-reply/src/: main.rs
examples/icmpv6-router-advertisement/: Cargo.toml  check.sh
examples/icmpv6-router-advertisement/data/: expect_icmpv6.out  icmpv6_router_advertisement.pcap
examples/icmpv6-router-advertisement/src/: main.rs
examples/ipv4or6/: check.sh
examples/ipv4or6/src/: main.rs
examples/macswap/: check.sh
examples/maglev/: Cargo.toml
examples/maglev/src/: main.rs
examples/mtu-too-big/: check.sh
examples/mtu-too-big/src/: main.rs
examples/nat-tcp-v4/src/: main.rs
examples/ndp-router-advertisement/: Cargo.toml  check.sh
examples/op-errors/: check.sh
examples/signals/: check.sh
framework/: Cargo.toml  build.rs
framework/src/: lib.rs  runtime.rs
framework/src/config/: mod.rs
framework/src/control/: sctp.rs  tcp.rs
framework/src/headers/: ip.rs  mod.rs
framework/src/headers/ip/v6/: mod.rs  srh.rs
framework/src/headers/ip/v6/icmp/: mod.rs  packet_too_big.rs
framework/src/interface/: mod.rs  packet.rs
framework/src/interface/port/: mod.rs  phy_port.rs  virt_port.rs
framework/src/native/: libnuma.rs  mbuf.rs  zcsi.rs
framework/src/native_include/: dpdk-headers.h
framework/src/operators/: groupby_batch.rs
framework/src/packets/: buffer.rs
framework/src/scheduler/: context.rs  embedded_scheduler.rs  standalone_scheduler.rs
framework/src/state/: cp_mergeable.rs  reordered_buffer.rs
framework/src/state/reordered_buffer/: reordered_buffer.rs
framework/src/testing/: mod.rs  packet.rs
framework/tests/: packets.rs
native/: Makefile  mempool.c  pmd.c  utils.c
native/include/: pmd.h
native/test/: test.c
netbricks-codegen/src/: lib.rs
scripts/: disable_aslr.sh
test/icmpv6/src/: nf.rs
test/mtu-too-big/: Cargo.toml  flame-graph.html
test/mtu-too-big/src/: main.rs  nf.rs
test/srv6-inject/: Cargo.toml  check.sh
test/srv6-inject/src/: main.rs  nf.rs
test/srv6-sighup-flow/: Cargo.toml  check.sh
test/tcp-checksum/src/: nf.rs
