[package]
name = "check"
version = "0.1.0"
authors = ["William of Ockham <Occam_Engineering@comcast.com>"]

[dependencies]
time = ">=0.1.0"
quote = "*"
syn = { version = "0.15.21", features = ["full", "extra-traits"] }
proc-macro2 = { version = "*", features = ["nightly"] }

[dependencies.static_assertions]
version  = "0.3.1"
features = ["nightly"]

[lib]
proc-macro = true

[features]
default = []
print = []
