[package]
name = "icmpv6-router-advertisement"
version = "0.1.0"
authors = ["William of Ockham <Occam_Engineering@comcast.com>"]
description = "Example: icmpv6 router advertisement"
license = "..."
repository = "https://github.com/williamofockham/NetBricks/tree/master/examples/icmpv6-router-advertisement"
readme = "..."
keywords = ["netbricks", "network-functions", "nfs", "packet-processing"]
categories = ["network-functions", "framework"]

[dependencies]
netbricks = { path = "../../framework"}
fallible-iterator = "0.2.0"

[features]
default = []
print = []
