[package]
name = "srv6-inject"
version = "0.1.0"
authors = ["William of Ockham <Occam_Engineering@comcast.com>"]

[dependencies]
netbricks = { path = "../../framework", features = ["performance"] }
time = ">=0.1.0"
generic-array = ">= 0.11.0"
lazy_static = "1.2.0"
fnv = "*"
check = { path = "../../check" }
once_cell = "0.1.6"
galvanic-assert = "0.8"
flame = "0.2.2"
flamer = "0.3"

[dependencies.static_assertions]
version  = "0.3.1"
features = ["nightly"]

[features]
default = []
print = []
